<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4" />

    <MultiSelectListPreference
        android:entries="@array/regions_list_for_settings"
        android:entryValues="@array/regions_list"
        android:key="pref_regionsToInclude"
        android:title="@string/world_regions"
        android:summary="@string/world_regions_description"
        android:persistent="true"
        android:defaultValue="@array/regions_list" />

    <EditTextPreference
        android:key="pref_countOfQuestions"
        android:title="@string/count_of_questions"
        android:summary="@string/count_of_questions_description"
        android:dialogTitle="@string/count_of_questions_description"
        android:persistent="true"
        android:defaultValue="10"/>

    <CheckBoxPreference
        android:key="pref_regions_random"
        android:title="@string/regions_random"
        android:summary="@string/regions_random_description"
        android:defaultValue="true" />

</PreferenceScreen>